# fontconfig

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.am  NEWS  autogen.sh  configure.ac  meson.build  meson.options  meson_options.txt  new-version.sh
.gitlab-ci/: .abidiff  BUILD_CONFIG.md  abicheck.sh  abidiff2xml.py  alpine-install.sh  alpine-setup.sh  apicheck.py  build.py  build.sh  build.yaml  ci.template  config.yml  fedora-install.sh  freebsd-install.sh  linux-mingw-w64-64bit.txt  msys2.yml  other.yml  symbol.list  x86_64-w64-mingw32-clang.txt
build-aux/: fetch-testfonts.py
conf.d/: 05-macos.conf  40-nonlatin.conf  45-generic.conf  48-guessfamily.conf  48-spacing.conf  49-sansserif.conf  60-generic.conf  60-latin.conf  65-nonlatin.conf  Makefile.am  meson.build
doc/: Makefile.am  fcconffile.fncs  fcconfig.fncs  fcconstant.fncs  fcfontations.fncs  fcformat.fncs  fcpattern.fncs  fontconfig-devel.sgml  fontconfig-user.sgml  meson.build
fc-cache/: fc-cache.c
fc-cat/: fc-cat.c
fc-const/: Makefile.am  fc-const.py  fcconst.list  meson.build
fc-fontations/: attributes.rs  bitmap.rs  capabilities.rs  foundries.rs  instance_enumerate.rs  meson.build  mod.rs  name_records.rs  names.rs
fc-fontations-bindgen/: build.rs
fc-fontations/pattern_bindings/: fc_wrapper.rs  mod.rs
fc-genconf/: Makefile.am  fc-genconf.c  fc-genconf.sgml  meson.build
fc-genericfamily/: Makefile.am  cursive.txt  emoji.txt  fangsong.txt  fantasy.txt  fc-genericfamily.py  math.txt  meson.build  monospace.txt  sans-serif.txt  serif.txt  system-ui.txt
fc-lang/: Makefile.am  meson.build  suz.orth
fc-list/: fc-list.c
fc-match/: fc-match.c
fc-pattern/: fc-pattern.c
fc-query/: fc-query.c
fc-scan/: fc-scan.c
fontconfig/: fcfreetype.h  fcprivate.h  fontconfig.h  fontconfig.h.in  meson.build
meson-cc-tests/: c99-vsnprint-test.c
src/: Makefile.am  fcarch.c  fccache.c  fccfg.c  fccharset.c  fccompat.c  fcconffile.c  fcdbg.c  fcdefault.c  fcdir.c  fcformat.c  fcfreetype.c  fcgenericalias.c  fchash.c  fcinit.c  fcint.h  fclang.c  fclist.c  fcmatch.c  fcname.c  fcobjs.c  fcobjs.h  fcpat.c  fcptrlist.c  fcstr.c  fcxml.c  meson.build
test/: Makefile.am  TEST-JSON-FORMAT.md  meson.build  pytest.ini  run-test-conf.sh  test-48-guessfamily.json  test-49-sansserif.json  test-60-latin.json  test-conf.c  test-crbug1004254.c  test-gen-testcache.c  test-issue-525-2.conf  test-issue-525-2.json  test-issue-525.conf  test-issue-525.json  test-issue-539.conf  test-issue-539.json  test-locale.json  test-mt-fccfg.c  test-name-parse.c  test-ostest.c  test_basic.py  test_cache_file.py  test_conf.py  test_crbug1004254.py  test_fontations_ft_query.py  test_genconf.py  test_issue431.py  test_issue547.py  test_sandbox.py  test_sysroot.py  wrapper-script.sh
test/fctest/: __init__.py
