[package]
name = "fc-fontations"
version = "0.1.0"
edition = "2021"

[dependencies]
fontconfig-bindings = { path = "./fc-fontations/fontconfig-bindings" }
fcint-bindings = { path = "./fc-fontations/fcint-bindings"}
libc = "0.2.178"
read-fonts = { version = "0.37", features = [ "experimental_traverse" ]}
font-types = { version = "0.11", features = ["bytemuck"]}
skrifa = "0.40"
bytemuck = { version = "1.25.0" , features = [ 'derive', 'min_const_generics'] }
bytemuck_derive = "1"


[lib]
crate-type = ["staticlib"]
path = "fc-fontations/mod.rs"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
warnings = "deny"
